[package]
name = "pluginwrapper"
version = "0.1.0"
authors = ["RACE Two Six Team <race@twosixlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin_comms_twosix_rust =  { path = "../plugin/", version = "0.1.0" }
shims =  { path = "../shims/", version = "0.1.0" }
libc = "0.2"
scopeguard = "1.0"

[lib]
name = "pluginwrapper"
crate-type = ["staticlib"]
